--- a/Proyek Akhir Analisis Data/requirements.txt
+++ b/Proyek Akhir Analisis Data/requirements.txt
@@ -1,7 +1,4 @@
-# Library yang akan digunakan
-import os
-import pandas as pd
-import streamlit as st
-import matplotlib.pyplot as plt
-import seaborn as sns
-import matplotlib.ticker as mticker
+streamlit
+pandas
+matplotlib
+seaborn
